--- a/com.cet325.bg51az/app/src/main/res/values/strings.xml
+++ b/com.cet325.bg51az/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Citizens of the World</string>
+    <string name="btn_viewList">View List</string>
+    <string name="btn_favCurrency">Favourite Currency</string>
+    <string name="btn_about">About</string>
 </resources>
