--- a/com.cet325.bg51az/app/src/main/res/values/strings.xml
+++ b/com.cet325.bg51az/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="btn_viewList">View List</string>
     <string name="btn_favCurrency">Favourite Currency</string>
     <string name="btn_about">About</string>
+    <string name="add_location">Add Location</string>
+    <string name="delete_location">Delete Location</string>
 </resources>
