--- a/com.cet325.bg51az/app/src/main/res/values/strings.xml
+++ b/com.cet325.bg51az/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="btn_about">About</string>
     <string name="add_location">Add Location</string>
     <string name="delete_location">Delete Location</string>
+    <string name="pressure">Pressure</string>
+    <string name="humidity">Humidity</string>
+    <string name="wind">Wind</string>
+    <string name="clouds">Clouds</string>
+    <string name="rain">Rain</string>
 </resources>
