--- a/com.cet325.bg51az/app/src/main/res/values/strings.xml
+++ b/com.cet325.bg51az/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Citizens of the World</string>
-    <string name="btn_viewList">View List</string>
-    <string name="btn_favCurrency">Favourite Currency</string>
+    <string name="btn_viewList">List</string>
+    <string name="btn_weather">Weather</string>
+    <string name="btn_currency">Currency</string>
     <string name="btn_about">About</string>
     <string name="add_location">Add Location</string>
     <string name="delete_location">Delete Location</string>
