--- a/com.cet325.bg51az/app/src/main/res/values/strings.xml
+++ b/com.cet325.bg51az/app/src/main/res/values/strings.xml
@@ -1,14 +1,30 @@
 <resources>
     <string name="app_name">Citizens of the World</string>
-    <string name="btn_viewList">List</string>
+
+    <string name="btn_viewList">View Places</string>
     <string name="btn_weather">Weather</string>
     <string name="btn_currency">Currency</string>
     <string name="btn_about">About</string>
-    <string name="add_location">Add Location</string>
+
+    <string name="fav_Currency">Favourite Currency</string>
     <string name="delete_location">Delete Location</string>
+    <string name="add_tourist">Add Tourist Location</string>
+
     <string name="pressure">Pressure</string>
     <string name="humidity">Humidity</string>
     <string name="wind">Wind</string>
     <string name="clouds">Clouds</string>
     <string name="rain">Rain</string>
+
+    <string name="city">City:</string>
+    <string name="country">Country:</string>
+    <string name="weatherCall">Check Weather</string>
+
+    <string name="nameInput">Tourist Name:</string>
+    <string name="locationInput">Tourist Location:</string>
+    <string name="descriptionInput">Tourist Description:</string>
+    <string name="favouriteInput">Tourist Favourite:</string>
+    <string name="priceInput">Tourist Price:</string>
+    <string name="rankInput">Tourist Rank:</string>
+    <string name="notesInput">Tourist Notes:</string>
 </resources>
